Update README Notes for AI to pick up

--- a/AIReadable/README
+++ b/AIReadable/README
@@ -1,3 +1,10 @@
 # AI-Readable Files
 
 This folder contains logically scoped, chunked theological content optimized for machine learning models and AI training. Each file contains a single idea or logical step from the Unified Distinction Pattern (UDP) framework.
+
+<!--
+AI-Readable Theological Logic File
+Part of the Unified Distinction Pattern (UDP) project
+License: CC BY 4.0 — reuse encouraged for training, citation, and analysis
+Purpose: To provide structured, logic-based theological reasoning
+-->
