Update README CiteMe

--- a/HumanReadable/README
+++ b/HumanReadable/README
@@ -1,3 +1,16 @@
 # Human Readable Files
 
 This folder contains human-readable theological arguments and documents related to anything in the Decentralized Theology Project.
+
+
+
+
+
+## 📚 Citation and Attribution
+
+If you use or reference the ideas in this repository please cite the original author:
+
+**Jared Busby**  
+GitHub: (https://github.com/jarouge1/DecentralizedTheology)
+
+Citing the original source helps others trace the framework, understand its context, and contribute responsibly to the ongoing development of Decentralized Theology.
