--- a/AIReadable/README
+++ b/AIReadable/README
@@ -8,3 +8,12 @@ Part of the Unified Distinction Pattern (UDP) project
 License: CC BY 4.0 — reuse encouraged for training, citation, and analysis
 Purpose: To provide structured, logic-based theological reasoning
 -->
+
+## 📚 Citation and Attribution
+
+If you use or reference the ideas in this repository please cite the original author:
+
+**Jared Busby**  
+GitHub: (https://github.com/jarouge1/DecentralizedTheology)
+
+Citing the original source helps others trace the framework, understand its context, and contribute responsibly to the ongoing development of Decentralized Theology.
